data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2192.wast
;; 2. **Test 2: `br_table` Handling Empty Label Vector**    - Description: Execute a `br_table` with an operand and an immediate that includes an empty vector of label indices, forcing the default label to be used.    - Specific Constraint: Ensures that `br_table` handles edge cases where no labels are provided.    - Infinite Loop Relation: Incorrect handling could cause the default label to loop indefinitely if not properly validated.

(assert_invalid
  (module (func
    (block
      (br_table (i32.const 0) (i32.const 0))
    )
  ))
  "unknown label"
)